# vnet-dataplane

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
agent/: CMakeLists.txt  PLAN.md  README.md
agent/include/vnet/agent/: command_runner.hpp  commands.hpp  status.hpp
agent/src/: command_runner.cpp  commands.cpp  main.cpp  status.cpp
docs/: architecture.md  roadmap.md
kernel/: Makefile  vnetdrv.c
linux_accel/: .gitignore  README.md
linux_accel/.github/workflows/: ci.yml
linux_accel/bench/: README.md  dns_dual_end_cache_bench.sh  dns_tc_vs_xdp_bench.sh  dns_xdp_cache_bench.sh  grpc_fast_cache_bench.sh  grpc_h2c_monitor_bench.sh  grpc_tc_monitor_bench.sh  k8s_path_probe.sh  k8s_workload_evidence.sh  openstack_grpc_e2e.sh  openstack_grpc_harness.c  openstack_path_probe.sh  openstack_tc_attach_smoke.sh  openstack_workload_evidence.sh  virt_path_bench.sh
linux_accel/bpf/: README.md  dns_client_cache.c  dns_monitor.c  dns_xdp_cache_helpers.h  dns_xdp_monitor.c  grpc_monitor.c
linux_accel/deliverables/: ebpf-network-service-cache-defense.pptx
linux_accel/docs/: benchmark-plan.md  cachectl-runtime-policy.md  cloud-native-integration.md  competition-completion-matrix.md  demo-runbook.md  dns-client-cache-comparison.md  dns-client-cache.md  dual-ended-cache-design.md  final-report-draft.md  finals-sprint-plan-2026-08-20.md  grpc-tc-monitor-mvp.md  hook-selection.md  macos-editor-setup.md  openstack-grpc-e2e.md  parallels-testenv.md  problem-statement.md  related-work-and-baselines.md  tasks.md  tc-dns-event-mvp.md  technical-roadmap.md  test-matrix.md  virtualization-path-benchmark.md
linux_accel/scripts/: build_linux.sh  create_github_repo.sh  dns_v1_demo_runner.sh  parallels_dns_v1_demo.sh
linux_accel/src/: README.md  cache_policy.cpp  cachectl.cpp  dns_cache_config.cpp  dns_monitor.cpp  dns_monitor_args.cpp  dns_monitor_metrics.cpp  grpc_cache_protocol.cpp  grpc_fast_cache.cpp  grpc_monitor.cpp  packet_parser.cpp  virt_service_classifier.cpp
linux_accel/src/include/: cache_policy.hpp  dns_cache_config.hpp  (+6 more)
tests/: CMakeLists.txt  packet_test.cpp
userspace/: CMakeLists.txt
userspace/include/vnet/: packet.h
userspace/src/: main.cpp  packet.cpp  virt_service_classifier.cpp
